# teacher_quiz_ui

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_initial_schema.py  20260506_0002_assignment_students.py  20260507_0003_class_teacher_id.py  20260507_0004_class_note.py  20260509_0005_custom_misconceptions.py  20260511_0006_custom_misc_nullable.py  20260511_0007_followup_cause_ids.py  20260514_0008_treatment_phase_cer.py  20260518_0009_scenario_delete_set_null.py  20260518_0010_remaining_fk_cascades.py  20260522_0011_class_school_year.py  20260525_0012_admin_role_and_is_active.py  20260525_0013_units_table.py  20260525_0014_knowledge_nodes_misconceptions.py  20260525_0015_node_teaching_aid.py  20260525_0016_quiz_is_sample.py  20260525_0017_node_on_canvas.py  20260526_0018_parent_nodes.py  20260526_0019_units_add_type.py  20260529_0020_class_categories.py  20260529_0021_unit_parent_nodes.py  20260529_0022_seed_teaching_units.py  20260529_0023_unit_code_per_grade.py  20260603_0024_romanize_node_ids.py  20260603_0025_dedup_water_parent_nodes.py  20260604_0026_relocate_water_knowledge_nodes.py  20260604_0027_load_kn_hierarchy.py  20260604_0028_misconception_source.py  20260604_0029_literature_misconceptions.py  20260608_0030_followup_error_type.py  (+2 more)
backend/app/: config.py  main.py
(+359 files in other folders)
